# shadok_and_gibby

./: .clang-format  .gitattributes  CMakeLists.txt  README.md  build_AppImage.sh  conandata.yml  conanfile.py
app/: CMakeLists.txt  config.cpp  config.h  main.cpp
app/linux/: app.desktop  app.desktop.in  io.github.subbota_a.shadok_and_gibby.metainfo.xml  metainfo.xml
app/linux/AppImage/: Dockerfile  build.sh
app/linux/AppImage/scripts/: docker_build.sh
app/windows/: resources.rc  setup.iss.in
domain/: CMakeLists.txt
domain/include/domain/: commands.h  config.h  state.h  units.h
logic/: CMakeLists.txt  engine.cpp
logic/include/logic/: engine.h
paths/: CMakeLists.txt  paths.cpp
paths/include/paths/: paths.h
render/: CMakeLists.txt  deleters.cpp  deleters.h  engine.cpp  event_controller.cpp  event_controller.h  resources.cpp  resources.h  sdl_engine.cpp  sdl_engine.h  sdl_engine_factory.cpp  sdl_guard.cpp  sdl_guard.h  sdl_resources.h  surface.cpp  surface.h
render/include/render/: engine.h  sdl_engine_factory.h
sdl2/win/docs/: README-android.md  README-emscripten.md  README-porting.md  README-raspberrypi.md  README-winrt.md
ui/: CMakeLists.txt  engine.cpp  event_controller.cpp  event_controller.h  resources.cpp  resources.h  sdl_engine.cpp  sdl_engine.h  sdl_engine_factory.cpp  sdl_guard.cpp  sdl_guard.h  sdl_resources.h  surface.cpp  surface.h
ui/include/ui/: commands.h  engine.h  event_controller.h  sdl_engine_factory.h
